[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch_tpu"
path = "src/fetch_tpu.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "=0.13.0"
bincode = "=1.3.3"
bs58 = "=0.4.0"
# most recent version that works with rust <= rust 1.47
ed25519 = "=1.3.0"
ed25519-dalek = "=1.0.1"
rand = "=0.8.5"
solana-client = "=1.10.3"
solana-gossip = "=1.10.3"
solana-net-utils = "=1.10.3"
solana-sdk = "=1.10.3"
solana-streamer = "=1.10.3"
