[package]
name = "fetch_tpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "=1.3.3"
solana-gossip = "=1.10.3"
solana-net-utils = "=1.10.3"
solana-sdk = "=1.10.3"
solana-streamer = "=1.10.3"
